Fixed alignment on Cat A Mod 2 Test Report

--- a/src/app/pages/test-report/cat-a-mod2/test-report.cat-a-mod2.page.scss
+++ b/src/app/pages/test-report/cat-a-mod2/test-report.cat-a-mod2.page.scss
@@ -40,7 +40,7 @@ $toolbar-height: 56px;
   }
 
   .first-row-adjust {
-    margin: -12px 0;
+    margin: -16px 0;
   }
 
   .section-header {
